# access-tool

./: Makefile  docker-compose.dev.yml
backend/api/pos/: chat.py  gift.py
backend/api/routes/: gift.py
backend/community_manager/: entrypoint.py  pyproject.toml  utils.py
backend/community_manager/actions/: chat.py
backend/community_manager/events/: __init__.py
backend/community_manager/gateway/: client.py  service.py  types.py
backend/community_manager/services/: bot_api.py
backend/community_manager/tasks/: chat.py
backend/core/: pyproject.toml
backend/core/src/core/: constants.py
backend/core/src/core/actions/: authorization.py  gift.py  jetton.py  system.py
backend/core/src/core/actions/chat/: __init__.py  base.py
backend/core/src/core/actions/chat/rule/: blockchain.py  gift.py
backend/core/src/core/dtos/: fields.py
backend/core/src/core/dtos/chat/rule/: gift.py  internal.py
backend/core/src/core/dtos/gift/: collection.py  item.py
backend/core/src/core/migrations/data/: gift-collection-ids-to-names.json
backend/core/src/core/migrations/versions/: 1772632462-abd20b1dfcfb-migrate_gift_collection_to_id.py
backend/core/src/core/models/: gift.py  rule.py
backend/core/src/core/services/: nft.py  superredis.py  wallet.py
backend/core/src/core/services/chat/: user.py
backend/core/src/core/services/gift/: collection.py  item.py
backend/core/src/core/static/: whitelisted_gift_collections.txt
backend/core/src/core/utils/: gift.py
backend/indexer_blockchain/: tasks.py
backend/indexer_gifts/: tasks.py
backend/indexer_gifts/actions/: item.py
backend/indexer_gifts/indexers/: item.py
backend/scheduler/: celery_app.py  requirements.txt
backend/tests/: conftest.py
config/docker/: Dockerfile.scheduler  Dockerfile.test-executor
(+16 files in other folders)
