[build-system]
requires = [ "setuptools==80.9.0" ]
build-backend = "setuptools.build_meta"

[project]
name = "community_manager"
version = "1.0.0"
description = "Access Community Tool – Community Manager"
authors = [
    { name="danoctua", email="danoctua@gmail.com" }
]
license = { text = "MIT" }
requires-python = "==3.11.6"
dependencies = [
    "aiogram==3.24.0",
]
