[build-system]
requires = [ "setuptools==80.9.0" ]
build-backend = "setuptools.build_meta"

[project]
name = "core"
version = "1.0.1"
description = "Access Community Tool – Core package"
authors = [
    { name="danoctua", email="danoctua@gmail.com" }
]
license = { text = "MIT" }
requires-python = "==3.11.6"
dependencies = [
    "SQLAlchemy~=2.0.34",
    "redis~=5.1.0b7",
    "psycopg[binary]==3.2.9",
    "mysql-connector-python~=9.1.0",
    "pre-commit==4.0.1",
    "click==8.1.8",
    "httpx>=0.27.0",
    "telethon==1.40.0",
    "celery==5.4.0",
    "celery-types==0.23.0",
    "alembic==1.14.1",
    "pydantic==2.10.6",
    "pydantic-settings==2.7.1",
    "pytonapi==0.4.3",
    "python-slugify==8.0.4",
    "gql[httpx]==3.6.0b4",
    "aioboto3==14.1.0",
    "cryptography==44.0.2",
    "asgiref==3.9.0",
    "aiolimiter==1.2.1",
    "setuptools==80.9.0",
    "pynacl==1.5.0",
    # This one is needed only in core to raise FastAPI errors from actions
    "fastapi==0.115.8",
]
[project.optional-dependencies]
dev = [
    "pip-tools==7.5.1",
    "pytest==8.3.5",
    "pytest-cov==6.1.1",
    "pytest-mock==3.14.0",
    "factory-boy==3.3.3",
    "pytest-asyncio==0.26.0",
    "pytest-env==1.1.5",
    "respx==0.22.0",
]


[tool.setuptools.packages.find]
where = ["src"]
